made home page position fixed instead of absolute to prevent scrolling and seeing white on mobile

--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -9,7 +9,7 @@
 
 
 .HomePage{
-    position: absolute;
+    position: fixed;
     display: flex;
     width: 100%;
     height: 100%;
